--- a/windowopen通信/child.html
+++ b/windowopen通信/child.html
@@ -2,27 +2,27 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Child</title>
 </head>
 
 <body>
     <h1>Child</h1>
     <script>
-        window.addEventListener('message', e => {
+        window.addEventListener("message", (e) => {
             console.log(333333333333333333, e.data);
-        })
+        });
 
-        window.addEventListener('load', () => {
-            console.log(11111111111111, 'load...');
+        window.addEventListener("load", () => {
+            console.log(11111111111111, "load...");
             window.opener.postMessage({
                 name: window.name,
-                status: 'done'
+                status: "done",
+                cmd: "childPageLoad",
             });
-
-        })
+        });
     </script>
 </body>
 
