--- a/获取字符串大小.html
+++ b/获取字符串大小.html
@@ -30,6 +30,9 @@
             return Math.pow(1024, num);
         }
 
+        // 1个字节是8个二进制位（8个二进制位组成1个字节），即1Byte=8bit（八个位的组合，共有256种电路状态）。
+        // 1个数字=1个英文字母（字符）=1字节（Byte），即一个标准英文字母就是一个字节，它有8个比特（bit），（如A为10D，用00001010来表示，8个二进制位）。1个汉字=2个字节，即一个标准汉字有2个字节，8个bit一个字节，也就是说在计算机里1个汉字要用16个bit来表示。另外中文标点符号占2个字节，英文标点符号(,.?!%&+-*/)，占1个字节，中文省略号（……）和括（破折）号（——）各占4个字节。 文件的大小其实就是文件内容实际具有的字节数，它以Byte为衡量单位，只要文件内容和格式不发生变化，文件大小就不会发生变化。
+
         console.log(getSize("aaa"));
         console.log(getSize(123));
         console.log(getSize("蓝忘机"));
